--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "module": "es6",
     "allowJs": true,
     "noImplicitAny": true,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
   },
   "include": ["./src/ts/**/*"],
   "watchOptions": {
